# rust-axum-v2

./: Cargo.toml
migrations/: 20260524102218_users.up.sql
src/: config.rs  dto.rs  main.rs  models.rs
